juno/qa/apps/spark-history-server/ingress.yml

apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: spark-history-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-secret: cqgd-qa-basic-auth-password
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/auth-type: basic
spec:
  tls:
    - hosts:
        - spark-history.qa.juno.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: spark-history.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-history-server
                port:
                  number: 18080
